updates to metadata

--- a/public/index.html
+++ b/public/index.html
@@ -10,9 +10,9 @@
 		
 		<meta name="keywords" content="Books, Library, Reading">
 		<meta name="author" content="Diana Gaona , Shafee Ahmed, Shan Siddiqui & Jahaziel Israel">
-		<meta name="description" content="Tsundoku (n.) is a Japanese term that refers to the act of acquiring books that then pile up, often unread, in one's home." />
+		<meta name="description" content="tsundoku (積ん読) is a Japanese term that refers to the act of acquiring books that then pile up, often unread, in one's home." />
 		
-		<meta property="og:title" content="Tsundoku - Books are here to stay.">
+		<meta property="og:title" content="tsundoku (積ん読)| Books are here to stay.">
 		<meta property="og:description" content="Check out which books are trending and search for new titles.">
 		<meta property="og:image" content="tinyurl.com/3x2d3za7">
 		<meta property="og:url" content="http://tsundoku.netlify.app">
@@ -33,7 +33,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-		<title>React App</title>
+		<title>tsundoku (積ん読) | Books are here to stay. </title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
